--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,17 @@
     "@aws-amplify/ui-react": "^2.1.6",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@material-ui/core": "^4.12.3",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/lab": "^5.0.0-alpha.44",
     "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.66",
     "@mui/material": "^5.2.7",
     "@mui/x-data-grid": "^5.2.1",
     "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^3.7.0",
     "aws-amplify": "^4.3.11",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "downshift": "^6.1.7",
     "next": "12.0.7",
     "next-auth": "^4.0.6",
