--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,4 @@
-DATABASE_URL=mysql://root:root@localhost:3306/medicine_robo
+DATABASE_URL=mysql://MEDICINEROBO:MedicineRobo_2022@yakuji-prod.cf6ivuffba0e.ap-northeast-1.rds.amazonaws.com:3306/medicine_robo
 GOOGLE_CLIENT_ID=235570504322-04mvlepe55mp6plkfuk3dgiitlptnqp9.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 FACEBOOK_CLIENT_ID=353617446132338
