--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mui/x-data-grid": "^5.2.1",
     "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^3.7.0",
+    "@reduxjs/toolkit": "^1.7.1",
     "aws-amplify": "^4.3.11",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
@@ -28,7 +29,9 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.24.0"
+    "react-hook-form": "^7.24.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@types/node": "17.0.7",
@@ -36,6 +39,7 @@
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "prisma": "^3.7.0",
-    "typescript": "4.5.4"
+    "typescript": "4.5.4",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
