--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "downshift": "^6.1.7",
     "next": "12.0.7",
     "next-auth": "^4.0.6",
+    "notistack": "^2.0.3",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "17.0.2",
@@ -39,7 +40,7 @@
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "prisma": "^3.7.0",
-    "typescript": "4.5.4",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "typescript": "4.5.4"
   }
 }
