--- a/Dockerfile.frontend_nginx
+++ b/Dockerfile.frontend_nginx
@@ -2,9 +2,9 @@ FROM nginx:1.17.4-alpine
 
 RUN apk add --no-cache bash
 
-COPY wait.sh /wait.sh
+# COPY wait.sh /wait.sh
 
-RUN chmod +x /wait.sh
+# RUN chmod +x /wait.sh
 
 RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx_frontend.conf /etc/nginx/conf.d
