--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/helpers/generateIcon.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/helpers/generateIcon.ts"],
   "exclude": ["node_modules"]
 }
