--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,11 @@
 version: 0.2
-
+artifacts:
+  files:
+    - appspec.yml
+  base-directory: $CODEBUILD_SRC_DIR
+  name: ecs-artifcats
+  descard-paths: no
+  
 phases:
   pre_build:
     commands:
