--- a/backend_appspec.yml
+++ b/backend_appspec.yml
@@ -3,7 +3,7 @@ Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: "arn:aws:ecs:us-east-1:111222333444:task-definition/my-task-definition-family-name:1"
+        TaskDefinition: "arn:aws:ecs:ap-northeast-1:381623038275:task-definition/yakuji-backend:6"
         LoadBalancerInfo:
           ContainerName: "nginx"
           ContainerPort: 80
