--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,13 +13,13 @@ phases:
       - echo Build started on `date`
       - echo Building the Docker image...          
       - docker build -t 381623038275.dkr.ecr.ap-northeast-1.amazonaws.com/yakuji_backend:latest -f Dockerfile.python .
-      - docker build -t 381623038275.dkr.ecr.ap-northeast-1.amazonaws.com/yakuji_frontend:latest -f Dockerfile.node .
+      #- docker build -t 381623038275.dkr.ecr.ap-northeast-1.amazonaws.com/yakuji_frontend:latest -f Dockerfile.node .
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker push 381623038275.dkr.ecr.ap-northeast-1.amazonaws.com/yakuji_backend:latest
-      - docker push 381623038275.dkr.ecr.ap-northeast-1.amazonaws.com/yakuji_frontend:latest
+      #- docker push 381623038275.dkr.ecr.ap-northeast-1.amazonaws.com/yakuji_frontend:latest
 
 
       
