--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region ap-northeast-1 | docker login --username AWS --password-stdin 381623038275.dkr.ecr.ap-northeast-1.amazonaws.com
-      - add env to frontend
+      - echo add env to frontend
       - echo DATABASE_URL=${DATABASE_URL} > frontend/.env.production
       - echo GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID} > frontend/.env.production
       - echo GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET} > frontend/.env.production
