--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,10 +1,22 @@
 version: 0.2
-
+artifacts:
+  name: ecs-artifcats
+  descard-paths: no
+  
 phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region ap-northeast-1 | docker login --username AWS --password-stdin 381623038275.dkr.ecr.ap-northeast-1.amazonaws.com
+      - echo add env to frontend
+      - echo DATABASE_URL=${DATABASE_URL} >> frontend/.env.production
+      - echo GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID} >> frontend/.env.production
+      - echo GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET} >> frontend/.env.production
+      - echo FACEBOOK_CLIENT_ID=${FACEBOOK_CLIENT_ID} >> frontend/.env.production
+      - echo FACEBOOK_CLIENT_SECRET=${FACEBOOK_CLIENT_SECRET} >> frontend/.env.production
+      - echo NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL} >> frontend/.env.production
+      - echo NEXTAUTH_URL=${NEXTAUTH_URL} >> frontend/.env.production
+      - echo JWT_SECRET=${JWT_SECRET} >> frontend/.env.production
   build:
     commands:
       - echo Build started on `date`
